html and css part of mobile navigation done

--- a/index.html
+++ b/index.html
@@ -66,7 +66,42 @@
             </div>
         </div>
     </header>
-
+    <nav class="navigation__container">        
+            <ul class="menu__ul  black-bg">
+                <li class="menu__icon dashboard">
+                    <img src="./assets/svg/dashboard-icon.svg" alt="dashboard">
+                </li>
+                <li class="menu__icon mail">
+                    <img src="./assets/svg/mail-icon.svg" alt="mail">
+                </li>
+                <li class="menu__icon cart">
+                    <img src="./assets/svg/cart-icon.svg" alt="cart">
+                </li>
+                <li class="menu__icon profilarrow">
+                    <img src="./assets/svg/profil_icon.svg" alt="profil">
+                    <img src="./assets/svg/arrowprofil-icon.svg" alt="arrow">
+                </li>
+            </ul> 
+            
+            <ul class="menu__ul--profil black-bg">
+                <li class="menu__icon collection">
+                    <!-- <img src="./assets/svg/collection-icon.svg" alt="my collection"> -->
+                    <p>Ma collection</p>
+                </li>
+                <li class="menu__icon favorites">
+                    <!-- <img src="./assets/svg/favorites-icon.svg" alt="my favorites"> -->
+                    <p>Mes favoris</p>
+                </li>
+                <li class="menu__icon settings">
+                    <!-- <img src="./assets/svg/settings-icon.svg" alt="settings"> -->
+                    <p>Paramètres</p>
+                </li>
+                <li class="menu__icon log">
+                    <!-- <img src="./assets/svg/log-icon.svg" alt="log"> -->
+                    <p>Déconnexion</p>
+                </li>
+            </ul>
+    </nav>
 
 
     <footer>
