display menu navigation when touch the burger button

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                     </div>
 
                 </div>
-                <div class="header__container--burger">
-                    <img src="./assets/svg/burger-icon.svg" alt="burger icon">
+                <div id="burger-btn" class="header__container--burger">
+                    <img src="./assets/svg/burger-icon.svg" alt="burger icon" data-set="menu__ul">
                 </div>
             </div>
             <div class="header__container--bot">
@@ -108,7 +108,7 @@
     
     </footer>
 
-
+<script src="./assets/scripts/navigation.js"></script>
 </body>
 
 </html>
