display menu and submenu in mobile navigation done

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </li>
                     <li class="menu__icon profilarrow">
                         <img src="./assets/svg/profil_icon.svg" alt="profil">
-                        <img src="./assets/svg/arrowprofil-icon.svg" alt="arrow">
+                        <img  src="./assets/svg/arrowprofil-icon.svg" alt="arrow" >
                     </li>
                 </ul>
             </div>
@@ -77,9 +77,9 @@
                 <li class="menu__icon cart">
                     <img src="./assets/svg/cart-icon.svg" alt="cart">
                 </li>
-                <li class="menu__icon profilarrow">
-                    <img src="./assets/svg/profil_icon.svg" alt="profil">
-                    <img src="./assets/svg/arrowprofil-icon.svg" alt="arrow">
+                <li  id="profilarrow-btn" class="menu__icon profilarrow" data-set="menu__ul--profil">
+                    <img src="./assets/svg/profil_icon.svg" alt="profil"  data-set="menu__ul--profil">
+                    <img  src="./assets/svg/arrowprofil-icon.svg" alt="arrow"  data-set="menu__ul--profil">
                 </li>
             </ul> 
             
