rotate submenu arrow

--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
                 <li class="menu__icon cart">
                     <img src="./assets/svg/cart-icon.svg" alt="cart">
                 </li>
-                <li  id="profilarrow-btn" class="menu__icon profilarrow" data-set="menu__ul--profil">
+                <li  id="profilarrow-btn-mobile" class="menu__icon profilarrow" data-set="menu__ul--profil">
                     <img src="./assets/svg/profil_icon.svg" alt="profil"  data-set="menu__ul--profil">
-                    <img  src="./assets/svg/arrowprofil-icon.svg" alt="arrow"  data-set="menu__ul--profil">
+                    <img id="arrow-mobile" class="" src="./assets/svg/arrowprofil-icon.svg" alt="arrow"  data-set="menu__ul--profil">
                 </li>
             </ul> 
             
