all navigation menu done

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
                 </div>
                 <div id="burger-btn" class="header__container--burger">
-                    <img src="./assets/svg/burger-icon.svg" alt="burger icon" data-set="menu__ul">
+                    <img src="./assets/svg/burger-icon.svg" alt="burger icon" data-set="menu__ul--profil">
                 </div>
             </div>
             <div class="header__container--bot">
@@ -48,7 +48,7 @@
                 </div>
             </div>
             <div class="header__container--menu">
-                <ul class="menu__ul">
+                <ul class="menu__ul  black-bg">
                     <li class="menu__icon dashboard">
                         <img src="./assets/svg/dashboard-icon.svg" alt="dashboard">
                     </li>
@@ -58,31 +58,15 @@
                     <li class="menu__icon cart">
                         <img src="./assets/svg/cart-icon.svg" alt="cart">
                     </li>
-                    <li class="menu__icon profilarrow">
-                        <img src="./assets/svg/profil_icon.svg" alt="profil">
-                        <img  src="./assets/svg/arrowprofil-icon.svg" alt="arrow" >
+                    <li  id="profilarrow-btn-mobile" class="menu__icon profilarrow" data-set="menu__ul--profil">
+                        <img src="./assets/svg/profil_icon.svg" alt="profil"  data-set="menu__ul--profil">
+                        <img id="arrow-mobile" class="" src="./assets/svg/arrowprofil-icon.svg" alt="arrow"  data-set="menu__ul--profil">
                     </li>
-                </ul>
+                </ul> 
             </div>
         </div>
     </header>
-    <nav class="navigation__container">        
-            <ul class="menu__ul  black-bg">
-                <li class="menu__icon dashboard">
-                    <img src="./assets/svg/dashboard-icon.svg" alt="dashboard">
-                </li>
-                <li class="menu__icon mail">
-                    <img src="./assets/svg/mail-icon.svg" alt="mail">
-                </li>
-                <li class="menu__icon cart">
-                    <img src="./assets/svg/cart-icon.svg" alt="cart">
-                </li>
-                <li  id="profilarrow-btn-mobile" class="menu__icon profilarrow" data-set="menu__ul--profil">
-                    <img src="./assets/svg/profil_icon.svg" alt="profil"  data-set="menu__ul--profil">
-                    <img id="arrow-mobile" class="" src="./assets/svg/arrowprofil-icon.svg" alt="arrow"  data-set="menu__ul--profil">
-                </li>
-            </ul> 
-            
+    <nav class="submenu__container">        
             <ul class="menu__ul--profil black-bg">
                 <li class="menu__icon collection">
                     <!-- <img src="./assets/svg/collection-icon.svg" alt="my collection"> -->
