footer navogation on mobile version is done

--- a/index.html
+++ b/index.html
@@ -74,24 +74,85 @@
                 </li>
                 <li class="menu__icon favorites">
                     <!-- <img src="./assets/svg/favorites-icon.svg" alt="my favorites"> -->
-                    <p>Mes favoris</p>
+                    <p class="cream-alpha-color">Mes favoris</p>
                 </li>
                 <li class="menu__icon settings">
                     <!-- <img src="./assets/svg/settings-icon.svg" alt="settings"> -->
-                    <p>Paramètres</p>
+                    <p class="cream-alpha-color">Paramètres</p>
                 </li>
                 <li class="menu__icon log">
                     <!-- <img src="./assets/svg/log-icon.svg" alt="log"> -->
-                    <p>Déconnexion</p>
+                    <p class="cream-alpha-color">Déconnexion</p>
                 </li>
             </ul>
     </nav>
 
 
-    <footer>
-    
-    </footer>
+    <footer class="black-bg">
+            <div class="footer__container">
+                <div id="footer-menu" class="footer__container--gamegogsmenu">
+                    <div class="gamegogs__title">
+                        <p>A propos de Gamegogs <img src="./assets/svg/arrowprofil-icon.svg" alt="arrow" data-set="about__ul"></p>
+                    </div>
+                    
+                    <ul id="about__ul" class="gamegogsmenu__about">
+                        <li class="gamegogsmenu__li">
+                            <p>A propos de gamegogs</p>
+                        </li>
+                        <li class="gamegogsmenu__li">
+                            <p>Emplois</p>
+                        </li>
+                        <li class="gamegogsmenu__li">
+                            <p>API</p>
+                        </li>
+                    </ul>
+                    <div class="gamegogs__title">
+                        <p>Voici de l'aide <img src="./assets/svg/arrowprofil-icon.svg" alt="arrow" data-set="help__ul"></p>
+                    </div>
+                    <ul id="help__ul" class="gamegogsmenu__help">
+                        <li class="gamegogsmenu__li">
+                            <p>Aide & Support</p>
+                        </li>
+                        <li class="gamegogsmenu__li">
+                            <p>Laisser une évaluation</p>
+                        </li>
+                        <li class="gamegogsmenu__li">
+                            <p>Raccourcis clavier</p>
+                        </li>
+                        <li class="gamegogsmenu__li">
+                            <p>Guide d'utilisation de la base de données</p>
+                        </li>
+                    </ul>
+                    <div class="gamegogs__title">
+                        <p>Rejoingnez-nous <img src="./assets/svg/arrowprofil-icon.svg" alt="arrow" data-set="join__ul"></p>
+                    </div>
+                    <ul id="join__ul" class="gamegogsmenu__join">
+                        <li class="gamegogsmenu__li">
+                            <p>Démarrer</p>
+                        </li>
+                        <li class="gamegogsmenu__li">
+                            <p>S'abonner</p>
+                        </li>
+                        <li class="gamegogsmenu__li">
+                            <p>Disquaire</p>
+                        </li>
+                        <li class="gamegogsmenu__li">
+                            <p>Contribuer</p>
+                        </li>
+                        <li class="gamegogsmenu__li">
+                            <p>Ajouter une référence</p>
+                        </li>
+                        <li class="gamegogsmenu__li">
+                            <p>Liste des contributeurs</p>
+                        </li>
+                    </ul>
+                </div>
 
+
+
+            </div>
+    </footer>
+<script src="./assets/scripts/footer.js"></script>
 <script src="./assets/scripts/navigation.js"></script>
 </body>
 
